get all queries changes(query api's)